adding store and validation
